# faceauth

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  compile_commands.json  distro-build-deps.md  fix_padding.py  install-kde.sh  install-pam.sh  install.sh
assets/icons/: generate.sh
faceauth-cli/: Cargo.toml  build.rs
faceauth-cli/src/: camera.rs  main.rs
faceauth-core/: Cargo.toml  build.rs
faceauth-core/src/: camera.rs  encoding.rs  error.rs  ipc.rs  lib.rs  model.rs
faceauth-daemon/: Cargo.toml
faceauth-daemon/src/: camera_actor.rs  handler.rs  main.rs  model_actor.rs
faceauth-kcm/: CMakeLists.txt
faceauth-kcm/src/: CMakeLists.txt  FaceAuthBackend.cpp  FaceAuthBackend.h  FaceAuthDaemon.cpp  FaceAuthDaemon.h  FaceAuthKcm.cpp  FaceAuthKcm.h  kcm_faceauth.json  main.cpp
faceauth-kcm/src/ui/: main.qml  standalone.qml
faceauth-notify/: Cargo.toml  build.rs
faceauth-notify/src/: main.rs
faceauth-pam/: Cargo.toml
faceauth-pam/src/: lib.rs
pam-config.d/: pam_faceauth
pam-configs/: faceauth
pam.d/: kde-fingerprint
po/: de.po  faceauth.pot
systemd/: faceauth-daemon.service
