[workspace]
resolver = "2"
members = ["faceauth-core", "faceauth-cli", "faceauth-pam", "faceauth-daemon", "faceauth-notify"]

[patch.crates-io]
# Patched to fix GREY vs GRAY fourcc mismatch for V4L2 greyscale cameras.
# The kernel uses "GREY" but nokhwa hardcoded "GRAY".
nokhwa-bindings-linux = { path = "vendor/nokhwa-bindings-linux" }

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
dlib-face-recognition = "0.3.2"
nokhwa = { version = "0.10.10", features = ["input-native"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
gettext-rs = "0.7.7"
thiserror = "2"
