[package]
name = "faceauth-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "faceauth"
path = "src/main.rs"

[dependencies]
faceauth-core = { path = "../faceauth-core" }
clap = { workspace = true }
serde_json = { workspace = true }
libc = "0.2"
gettext-rs = { workspace = true }
